<?xml version="1.0" encoding="utf-8"?>

<!--
  ~ Copyright (c) 2018 Hai Zhang <dreaming.in.code.zh@gmail.com>
  ~ All Rights Reserved.
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/action_open_with"
        android:title="@string/file_item_action_open_with" />

    <item
        android:id="@+id/action_cut"
        android:title="@string/cut" />

    <item
        android:id="@+id/action_copy"
        android:title="@string/copy" />

    <item
        android:id="@+id/action_hide"
        android:title="@string/file_item_action_hide" />

    <item
        android:id="@+id/action_delete"
        android:title="@string/delete" />

    <item
        android:id="@+id/action_rename"
        android:title="@string/rename" />

    <item
        android:id="@+id/action_extract"
        android:title="@string/file_item_action_extract" />

    <item
        android:id="@+id/action_dex_analyze"
        android:title="@string/file_item_action_dex_analyze" />

    <item
        android:id="@+id/action_install"
        android:title="@string/file_item_action_install" />

    <item
        android:id="@+id/action_apk_string_search"
        android:title="@string/file_item_action_apk_string_search" />

    <item
        android:id="@+id/action_elf_analyze"
        android:title="@string/file_item_action_elf_analyze" />

    <item
        android:id="@+id/action_hex_view"
        android:title="@string/file_item_action_hex_view" />

    <item
        android:id="@+id/action_compare_apk"
        android:title="@string/file_item_action_compare_apk" />

    <item
        android:id="@+id/action_view_manifest"
        android:title="@string/file_item_action_view_manifest" />

    <item
        android:id="@+id/action_set_timestamp"
        android:title="@string/file_item_action_set_timestamp" />

    <item
        android:id="@+id/action_auto_sign_apk"
        android:title="@string/file_item_action_auto_sign_apk" />

    <item
        android:id="@+id/action_sign_apk"
        android:title="@string/file_item_action_sign_apk" />

    <item
        android:id="@+id/action_rename_apk"
        android:title="@string/file_item_action_rename_apk" />

    <item
        android:id="@+id/action_convert_encoding"
        android:title="@string/file_item_action_convert_encoding" />

    <item
        android:id="@+id/action_archive"
        android:title="@string/file_item_action_archive" />

    <item
        android:id="@+id/action_share"
        android:title="@string/share" />

    <item
        android:id="@+id/action_copy_path"
        android:title="@string/file_item_action_copy_path" />

    <item
        android:id="@+id/action_add_bookmark"
        android:title="@string/file_item_action_add_bookmark" />

    <item
        android:id="@+id/action_create_shortcut"
        android:title="@string/file_item_action_create_shortcut" />

    <item
        android:id="@+id/action_properties"
        android:title="@string/file_item_action_properties" />
</menu>
