<?xml version="1.0" encoding="utf-8"?>

<!--
  ~ Copyright (c) 2026 Sulee7z <94352968+sulee7z@users.noreply.github.com>
  ~ All Rights Reserved.
  -->

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <me.zhanghai.android.files.ui.CoordinatorAppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?colorAppBarSurface"
        android:theme="?actionBarTheme">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            app:popupTheme="?actionBarPopupTheme" />
    </me.zhanghai.android.files.ui.CoordinatorAppBarLayout>

    <com.termux.view.TerminalView
        android:id="@+id/terminalView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@android:color/black"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:clickable="true" />

    <!-- Extra keys as a two-row grid, like Termux: the grid fills the width and
         each key stretches evenly. -->
    <GridLayout
        android:id="@+id/extraKeysGrid"
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/terminal_toolbar_background"
        android:columnCount="7"
        android:useDefaultMargins="false">

        <Button
            android:id="@+id/escKey"
            style="@style/Widget.MaterialFiles.TerminalKeyButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:text="@string/terminal_key_esc" />

        <Button
            android:id="@+id/tabKey"
            style="@style/Widget.MaterialFiles.TerminalKeyButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:text="@string/terminal_key_tab" />

        <Button
            android:id="@+id/ctrlKey"
            style="@style/Widget.MaterialFiles.TerminalKeyButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:text="@string/terminal_key_ctrl" />

        <Button
            android:id="@+id/altKey"
            style="@style/Widget.MaterialFiles.TerminalKeyButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:text="@string/terminal_key_alt" />

        <Button
            android:id="@+id/shiftKey"
            style="@style/Widget.MaterialFiles.TerminalKeyButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:text="@string/terminal_key_shift" />

        <Button
            android:id="@+id/minusKey"
            style="@style/Widget.MaterialFiles.TerminalKeyButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:text="@string/terminal_key_minus" />

        <Button
            android:id="@+id/slashKey"
            style="@style/Widget.MaterialFiles.TerminalKeyButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:text="@string/terminal_key_slash" />

        <Button
            android:id="@+id/pipeKey"
            style="@style/Widget.MaterialFiles.TerminalKeyButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:text="@string/terminal_key_pipe" />

        <Button
            android:id="@+id/upKey"
            style="@style/Widget.MaterialFiles.TerminalKeyButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:text="@string/terminal_key_up" />

        <Button
            android:id="@+id/downKey"
            style="@style/Widget.MaterialFiles.TerminalKeyButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:text="@string/terminal_key_down" />

        <Button
            android:id="@+id/leftKey"
            style="@style/Widget.MaterialFiles.TerminalKeyButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:text="@string/terminal_key_left" />

        <Button
            android:id="@+id/rightKey"
            style="@style/Widget.MaterialFiles.TerminalKeyButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:text="@string/terminal_key_right" />

        <Button
            android:id="@+id/collapseKey"
            style="@style/Widget.MaterialFiles.TerminalKeyButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:text="@string/terminal_key_collapse" />
    </GridLayout>
</LinearLayout>
