<?xml version="1.0" encoding="utf-8"?>

<!--
  ~ Copyright (c) 2026 Sulee7z <94352968+sulee7z@users.noreply.github.com>
  ~ All Rights Reserved.
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <item
        android:id="@+id/action_dex_smali_save"
        android:icon="@drawable/save_icon_control_normal_24dp"
        android:orderInCategory="100"
        android:title="@string/dex_smali_save"
        app:showAsAction="always"
        tools:ignore="AlwaysShowAction" />

    <item
        android:id="@+id/action_dex_smali_undo"
        android:icon="@drawable/round_undo_control_normal_24"
        android:orderInCategory="100"
        android:title="@string/undo"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_dex_smali_redo"
        android:icon="@drawable/round_redo_control_normal_24"
        android:orderInCategory="100"
        android:title="@string/redo"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_dex_smali_word_wrap"
        android:checkable="true"
        android:orderInCategory="100"
        android:title="@string/word_warp"
        app:showAsAction="never" />
</menu>
