<?xml version="1.0" encoding="utf-8"?>

<!--
  ~ Copyright (c) 2026 Sulee7z <94352968+sulee7z@users.noreply.github.com>
  ~ All Rights Reserved.
  -->

<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <me.zhanghai.android.files.ui.CoordinatorAppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?colorAppBarSurface"
            android:theme="?actionBarTheme">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?actionBarSize"
                app:popupTheme="?actionBarPopupTheme" />
        </me.zhanghai.android.files.ui.CoordinatorAppBarLayout>

        <androidx.appcompat.widget.SearchView
            android:id="@+id/searchView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:queryHint="@string/content_search_hint" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingStart="8dp">

            <CheckBox
                android:id="@+id/caseCheckBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/content_search_case_sensitive" />

            <CheckBox
                android:id="@+id/textOnlyCheckBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/content_search_only_text" />

            <TextView
                android:id="@+id/progressText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:gravity="end"
                android:paddingEnd="8dp"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="?android:attr/textColorSecondary" />
        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/resultsRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <ProgressBar
            android:id="@+id/progress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center" />

        <TextView
            android:id="@+id/errorText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:padding="32dp"
            android:textAppearance="?android:attr/textAppearanceMedium" />
    </LinearLayout>
</FrameLayout>
